--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -77,11 +77,13 @@
           </div>
 
           <ul class="extra">
-            <li>Developed an API in Go for an internal system for doctors to update their credentials</li>
+            <li>Designed and implemented an API in Go for an internal system for doctors to update their credentials</li>
             <li>Prototyped a command-line tool in Go to synchronize logic changes between CDN environments</li>
             <li>Led the development of and architected large portions of a search and scheduling API for a major health provider network, as part of the company's leap into healthcare</li>
+            <li>Helped to migrate a legacy AWS environment with about two dozen applications and services into a new one built entirely via Terraform</li>
             <li>Architected a modern backend for a travel product we acquired, helping to migrate from a Java-based monolith to a more modular, cloud-native approach</li>
-            <li>Helped to architect and led the development of a national physician finder, a core </li>
+            <li>Led the development of a CI/CD pipeline and provisioned infrastructure for the new travel backend using Terraform</li>
+            <li>Helped to architect and led the development of an API to provide search and scheduling for healthcare providers at a national scale</li>
             <li>Helped to develop and formalize our version control strategy, and implemented documentation and contracts that let us collaborate asynchronously with the frontend engineering team</li>
             <li>Served as a mentor to many other engineers: reviewed code, assisted in debugging and gave advice on how to move forward in their careers</li>
           </ul>
@@ -211,7 +213,7 @@
             <li>Created a small free-to-use blog website that operated for almost four years. Users were allowed to upload photos, write journal entries, etc. Source available upon request.</li>
             <li>Created <a href="https://section411.com">Section 411</a>, a blog on the <a href="http://gohugo.io">Hugo</a> platform with a theme designed from scratch.</li>
             <li>Published <a href="https://section411.com/2019/07/hello-world/">several</a> <a href="https://section411.com/2019/03/louvre-version-1.1/">technical</a> <a href="https://section411.com/2018/07/of-commits-and-containers/">posts</a></li>
-            <li>Created <a href="https://louvre.io">Louvre</a>, an image manager that can resize and serve images</li>
+            <li>Created <a href="https://louvre.io">Louvre</a>, an image manager that can resize and serve images on the fly</li>
           </ul>
         </div>
 
@@ -219,11 +221,11 @@
           <ul>
             <li>
               <b>Stack Overflow:</b>
-              <a href="http://www.stackoverflow.com/users/350278/jimmy-sawczuk">Jimmy Sawczuk</a>
+              <a href="http://stackoverflow.com/users/350278/jimmy-sawczuk">Jimmy Sawczuk</a>
             </li>
             <li>
               <b>GitHub</b>:
-              <a href="http://www.github.com/jimmysawczuk">github.com/jimmysawczuk</a>
+              <a href="http://github.com/jimmysawczuk">github.com/jimmysawczuk</a>
             </li>
           </ul>
         </div>
