Fix print styles

--- a/less/_resume_print.less
+++ b/less/_resume_print.less
@@ -1,12 +1,4 @@
-@page {
-  size: 8.5in 11in;
-  margin: 0.5in 0.5in 0.5in;
-}
-
-@page :first {
-  background-color: blue;
-  margin: 0.25in 0.5in 0.5in;
-}
+@import (inline) "_page.css";
 
 html {
   margin: 0px;
@@ -35,7 +27,7 @@ body {
 
     h1 {
       letter-spacing: normal;
-      font-size: 80px;
+      font-size: 60px;
     }
 
     h3 {
