--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -163,7 +163,7 @@
             Engineering Intern
           </div>
 
-          <ul class="extra">
+          <ul class="extra hidden">
             <li>Assisted in the civil engineering department with day-to-day tasks</li>
           </ul>
         </div>
@@ -185,7 +185,7 @@
             Web Programmer/Designer
           </div>
 
-          <ul class="extra">
+          <ul class="extra hidden">
             <li>Content management and addition for faculty and staff on the main district website</li>
             <li>Worked with other students on several larger projects, including a high school course registrar and a course database complete with objectives</li>
           </ul>
@@ -199,8 +199,6 @@
             <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React; some experience with C#, shell scripting</li>
             <li><b>Infrastructure:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform</li>
             <li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
-            <li><b>APIs:</b> Extensive experience with the Facebook platform (Graph API, Canvas apps); experience with the Twitter, Github API</li>
-            <li><b>Operating Systems:</b> Extensive experience with Windows 98 through Windows 10, macOS; experience with Linux (desktop, terminal, and programming)</li>
             <li><b>Other technology:</b> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
           </ul>
         </div>
