--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Jimmy Sawczuk</title>
-	<link href="{{ asset "/dist/main.css" }}" type="text/css" rel="stylesheet" />
-	<script src="{{ asset "/dist/main.js" }}" defer></script>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<meta name="msapplication-TileColor" content="#333333">
-	<meta name="theme-color" content="#ffffff">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jimmy Sawczuk</title>
+  <link href="{{ asset "/dist/main.css" }}" type="text/css" rel="stylesheet" />
+  <script src="{{ asset "/dist/main.js" }}" defer></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#333333">
+  <meta name="theme-color" content="#ffffff">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-3634519-20', 'auto');
-	  ga('send', 'pageview');
-	</script>
-	<meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
+    ga('create', 'UA-3634519-20', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
 <body>
-	<div id="main-container">
-		<div class="card">
-			<div class="top">
-				<div class="img">
-					<picture>
-						<source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
-						<source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
-						<img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" />
-					</picture>
-				</div>
-				<div class="details">
-					<h1 class="name">Jimmy Sawczuk</h1>
-					<h2 class="title"><span>Software Engineer</span><span>Rock Hill, SC</span></h2>
+  <div id="main-container">
+    <div class="card">
+      <div class="top">
+        <div class="img">
+          <picture>
+            <source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
+            <source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
+            <img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" />
+          </picture>
+        </div>
+        <div class="details">
+          <h1 class="name">Jimmy Sawczuk</h1>
+          <h2 class="title"><span>Software Engineer</span><span>Rock Hill, SC</span></h2>
 
-					<div class="links">
-						<a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fad fa-paper-plane fa-fw"></i> E-mail</a>
-						<a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411</a>
-						<a href="/resume" class="link resume" target="_blank"><i class="fad fa-id-card fa-fw"></i> Résumé</a>
-					</div>
-				</div>
-			</div>
-			<div class="bottom">
-				<div class="links">
-					<a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
-					<a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-					<a href="https://t.me/jimmysawczuk" class="link tg" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
-					<a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-					<a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
-					<a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fab fa-github"></i> Github</a>
-				</div>
-			</div>
-		</div>
-	</div>
+          <div class="links">
+            <a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank"><i class="fad fa-paper-plane fa-fw"></i> E-mail</a>
+            <a href="https://section411.com" class="link section411" target="_blank"><div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411</a>
+            <a href="/resume" class="link resume" target="_blank"><i class="fad fa-id-card fa-fw"></i> Résumé</a>
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="links">
+          <a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
+          <a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+          <a href="https://t.me/jimmysawczuk" class="link tg" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
+          <a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+          <a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+          <a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fab fa-github"></i> Github</a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	{{ $rev := getJSON "REVISION.json" -}}
-	<!-- rev. {{ index $rev "hex" "short" }}; {{ (index $rev "date" | parseTime).Format "2-Jan-2006 15:04:05 MST" }} -->
+  <div id="rev">
+    {{ $rev := getJSON "REVISION.json" -}}
+    <a
+      href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}"
+      target="_blank"
+    >
+      rev. {{ index $rev "hex" "short" }}
+    </a>
+  </div>
 </body>
 </html>
