--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -10,7 +10,7 @@
   <script src="{{ asset "/dist/resume.js" }}" defer></script>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
-  <meta name="keywords" content="jimmy, sawczuk, james, resume, php, html, css, mysql, mongodb, developer, software, engineer, go, programmer" />
+  <meta name="keywords" content="jimmy, sawczuk, james, resume, php, go, golang, javascript, aws, terraform, html, css, mysql, developer, software, engineer, programmer" />
   <meta name="description" content="The professional resume of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Rock Hill, SC." />
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
