--- a/less/main.less
+++ b/less/main.less
@@ -102,7 +102,6 @@ html {
       display: block;
       position: static;
       bottom: auto;
-      margin-bottom: 4em;
 
       .links {
         display: block;
@@ -395,7 +394,7 @@ html {
   }
 
   @media (max-width: @cutoff) {
-    left: 0;
+    position: static;
     text-align: center;
   }
 }
