--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -73,7 +73,7 @@
           </div>
 
           <div class="title">
-            Senior Software Engineer
+            Senior Software Engineer/Principal Software Engineer
           </div>
 
           <ul class="extra">
